--- a/heifer/package.json
+++ b/heifer/package.json
@@ -8,5 +8,10 @@
   "main": "main.js",
   "scripts": {
     "start": "node main.js"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.28.6",
+    "@babel/core": "^7.29.0",
+    "@babel/preset-env": "^7.29.0"
   }
 }
