--- a/heifer/package.json
+++ b/heifer/package.json
@@ -7,11 +7,16 @@
   "type": "module",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "build": "vite build",
+    "start": "node dist/heifer.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.6",
     "@babel/core": "^7.29.0",
-    "@babel/preset-env": "^7.29.0"
+    "@babel/preset-env": "^7.29.0",
+    "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "cowsay": "^1.6.0"
   }
 }
